--- a/index.html
+++ b/index.html
@@ -36,13 +36,21 @@
         <a href="#home">Home</a>
         <a href="#about">Tentang Kami</a>
         <a href="#menu">Menu</a>
+        <a href="#products">Product</a>
         <a href="#contact">Contact</a>
       </div>
       <div class="navbar-extra">
-        <a href="#" id="search"><i data-feather="search"></i></a>
+        <a href="#" id="search-button"><i data-feather="search"></i></a>
         <a href="#" id="shopping-cart"><i data-feather="shopping-cart"></i></a>
         <a href="#" id="list-menu"><i data-feather="menu"></i></a>
       </div>
+
+      <!-- search From Start -->
+      <div class="search-form">
+        <input type="search" id="search-box" placeholder="search here..." />
+        <label for="search-box"><i data-feather="search"></i></label>
+      </div>
+      <!-- search From End -->
     </nav>
     <!-- =================== NAVBAR END =================== -->
 
@@ -148,6 +156,95 @@
       </div>
     </section>
     <!-- =================== MENU END =================== -->
+
+    <!-- =================== PRODUCT START =================== -->
+    <section id="products" class="products">
+      <h2><span>Produk Unggulan</span> Kami</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis et
+        nesciunt libero, vitae harum ducimus ut perspiciatis porro quis delectus
+        tenetur esse at molestias molestiae!
+      </p>
+
+      <div class="row">
+        <div class="product-card">
+          <div class="product-icons">
+            <a href="#"><i data-feather="shopping-cart"></i></a>
+            <a href="#"><i data-feather="eye"></i></a>
+          </div>
+          <div class="product-image">
+            <img
+              class="product-card-img"
+              src="asset/img/home/produk/produk1.jpg"
+              alt="produk1"
+            />
+          </div>
+
+          <div class="product-content">
+            <h3>Coffee Beans 1</h3>
+            <div class="product-stars">
+              <i data-feather="star" class="starfill"></i>
+              <i data-feather="star" class="starfill"></i>
+              <i data-feather="star" class="starfill"></i>
+              <i data-feather="star"></i>
+              <i data-feather="star"></i>
+            </div>
+            <div class="product-price">IDR 30K <span>IDR 55K</span></div>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-icons">
+            <a href="#"><i data-feather="shopping-cart"></i></a>
+            <a href="#"><i data-feather="eye"></i></a>
+          </div>
+          <div class="product-image">
+            <img
+              class="product-card-img"
+              src="asset/img/home/produk/produk1.jpg"
+              alt="produk1"
+            />
+          </div>
+
+          <div class="product-content">
+            <h3>Coffee Beans 1</h3>
+            <div class="product-stars">
+              <i data-feather="star"></i>
+              <i data-feather="star"></i>
+              <i data-feather="star"></i>
+              <i data-feather="star"></i>
+              <i data-feather="star"></i>
+            </div>
+            <div class="product-price">IDR 30K <span>IDR 55K</span></div>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-icons">
+            <a href="#"><i data-feather="shopping-cart"></i></a>
+            <a href="#"><i data-feather="eye"></i></a>
+          </div>
+          <div class="product-image">
+            <img
+              class="product-card-img"
+              src="asset/img/home/produk/produk1.jpg"
+              alt="produk1"
+            />
+          </div>
+
+          <div class="product-content">
+            <h3>Coffee Beans 1</h3>
+            <div class="product-stars">
+              <i data-feather="star"></i>
+              <i data-feather="star"></i>
+              <i data-feather="star"></i>
+              <i data-feather="star"></i>
+              <i data-feather="star"></i>
+            </div>
+            <div class="product-price">IDR 30K <span>IDR 55K</span></div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- =================== PRODUCT END =================== -->
 
     <!-- =================== CONTACT START =================== -->
     <section id="contact" class="contact">
